--- a/biblio.bib
+++ b/biblio.bib
@@ -412,6 +412,21 @@ address = {Los Alamitos, CA, USA},
 	year = {2003}
 }
 
+@manual{intel-optimization,
+    citeulike-article-id = {2115856},
+    citeulike-linkout-0 = {http://developer.intel.com/products/processor/manuals/},
+    keywords = {btrees, cpu-architecture},
+    month = nov,
+    organization = {Intel},
+    posted-at = {2007-12-14 16:11:06},
+    priority = {0},
+    title = {{Intel 64 and IA-32 Architectures Optimization Reference Manual}},
+    url = {http://developer.intel.com/products/processor/manuals/},
+    year = {2007}
+}
+
+
+
 @techreport{Fayolle:2002:BOS,
 	author = {Glaume, Vincent   and Fayolle, Pierre  A. },
 	citeulike-article-id = {3815649},
@@ -1861,6 +1876,15 @@ year = {1996},
     howpublished = "\url{http://codenull.net/articles/kernel_mode_hooking.tar.gz}"
 }
 
+@MISC{adoreng,
+    author = "Stealth.",
+    title = "{Adore-NG}",
+    howpublished = "\url{http://www.cs.dartmouth.edu/~sergey/cs258/rootkits/adore-ng}"
+}
+
+
+
+
 @MISC{kmemRootkit,
     key = "{Phrack 58}",
     title ="{Linux on-the-fly kernel patching without LKM, by sd and devik}",
@@ -2087,6 +2111,17 @@ publisher = {IEEE Computer Society},
       YEAR = {2009},
       NOTE = "\url{http://www2.webkit.org/perf/sunspider-0.9/sunspider.html}"
 }
+
+
+@url{hypercomp,
+      TITLE = "A Performance Comparison of Hypervisors",
+      AUTHOR="VMWare",
+      YEAR = {},
+      NOTE = "\url{http://www.cc.iitd.ernet.in/misc/cloud/hypervisor_performance.pdf}"
+}
+
+
+
 
 @MISC{websense,
       TITLE = "Detecting Web Browser Heap Corruption",
@@ -2890,11 +2925,30 @@ publisher = {USENIX Association},
     year = {}
 }
 
+@URL{cve2013,
+    url={http://www.cvedetails.com/vulnerability-list/vendor_id-452/product_id-3264/year-2013/Mozilla-Firefox.html},
+    author = {Mozilla},
+    title = {\emph{Security Vulnerabilities Published in 2013 Mozilla Firefox and Thunderbird}},
+    year = {2013}
+}
+
+
+
 @misc{peacekeeper,
     howpublished={\texttt{http://service.futuremark.com/peacekeeper/}},
     author = {Futuremark Corporation},
     title = {\emph{Peacekeeper The Browser Benchmark}},
     year = {}
+}
+
+
+@inproceedings{dimva2013sentinel,
+      	authors = {Kaan Onarlioglu and Mustafa Battal and William Robertson and Engin Kirda},
+      	title = {{Securing Legacy Firefox Extensions with SENTINEL}},
+      	booktitle = {{Conference on Detection of Intrusions and Malware & Vulnerability Assessment (DIMVA)}},
+      	location = {{Berlin, DE}},
+      	month = {7},
+      	year = {2013}
 }
 
 
@@ -3667,6 +3721,23 @@ address = {Los Alamitos, CA, USA},
       NOTE = "\url{http://www2.webkit.org/perf/sunspider-0.9/sunspider.html}"
 }
 
+@url{costvirt,
+      TITLE = "Reducing Infrastructure Costs Through Virtualization",
+      AUTHOR="Leandro Sgallari",
+      YEAR = {2009},
+      NOTE = "\url{http://msdn.microsoft.com/en-us/architecture/aa902619.aspx}"
+}
+
+@url{costvirt2,
+      TITLE = "The Importance of Virtualization's Green Benefits and Cost Savings",
+      AUTHOR="Derive Technologies",
+      YEAR = {},
+      NOTE = "\url{http://www.derivetech.com/userfiles/files/Virtualizations_green_benefits_and_cost_savings_WP.pdf}"
+}     
+
+
+
+
 @MISC{websense,
       TITLE = "Detecting Web Browser Heap Corruption",
       AUTHOR = "Chenette, Stephan and Moti, Joseph",
@@ -3766,6 +3837,8 @@ address = {Los Alamitos, CA, USA},
       YEAR = {2009}, 
       NOTE = "\url{http://www.avertlabs.com/research/blog/index.php/2009/02/19/new-backdoor-attacks-using-pdf-documents/}"
 }
+
+
 
 
 
