--- a/bubble.tex
+++ b/bubble.tex
@@ -238,7 +238,7 @@ youtube.com 	&      12953 	&  	13585    	& +4.9\%\\
 \label{perfpopular}
 \end{table*} 
 
-We consider negligible the reported delay, due to the fact that the time for loading a web page is usually relatively short to have a noticeable impact on user experience.
+We consider the aforementioned performance overhead small and the overall countermeasure fast enough for every day computing, due to the fact that the time for loading a web page is usually relatively short to have a noticeable impact on user experience.
 
 \paragraph{Micro-benchmarks}
 Micro-benchmarks can offer a better evaluation of the real performance impact. We performed three different benchmarks: the SunSpider Javascript Benchmarks \cite{sunspider}, the Peacekeeper benchmarks \cite{peacekeeper} and the V8 benchmarking suite \cite{V8}.
