--- a/thesispreamble.tex
+++ b/thesispreamble.tex
@@ -53,7 +53,7 @@
 
 % boxedverbatim
 \usepackage{moreverb}
-
+\usepackage{multirow}
 
 \newcommand\bookepigraph[4]{
 \vspace{1em}\hfill{}\begin{minipage}{#1}{\begin{spacing}{0.9}
