--- a/introduction.tex
+++ b/introduction.tex
@@ -69,7 +69,7 @@ Even a software bug in the kernel can be exploited to inject and execute malicio
 
 
 \paragraph{Attacks through web browsers}
-In order to provide better web experience, modern web browsers are supported by a richer environment and more complex software architecture. It is common to extend the functionality of modern web browsers with plug-ins or script language engines that interact via an API. This higher complexity has also led to numerous security problems \cite{harden,6167512}. Moreover, the browser is often written in unsafe languages for performance reasons. This exposes it to the memory corruption vulnerabilities that can occur in programs written in these languages, such as buffer overflows and dangling pointer references. The presence of interpreters, plugins and extensions that can easily be embedded to the core of the browser made these environments an appealing target for the most recent attacks \cite{Heiderich:2012:SAS:2382196.2382276, Brahmasani:2012:PXA:2382756.2382768}.
+In order to provide better web experience, modern web browsers are supported by a richer environment and more complex software architecture. It is common to extend the functionality of modern web browsers with plug-ins or script language engines that interact via an API. This higher complexity has also led to numerous security problems \cite{dimva2013sentineli, cve2013}. Moreover, the browser is often written in unsafe languages for performance reasons. This exposes it to the memory corruption vulnerabilities that can occur in programs written in these languages, such as buffer overflows and dangling pointer references. The presence of interpreters, plugins and extensions that can easily be embedded to the core of the browser made these environments an appealing target for the most recent attacks \cite{heapspray, iespray, safarispray, cve2013}.
 
 
 \section{Contributions}
@@ -89,7 +89,7 @@ A countermeasure against kernel attacks, which relies on the cooperation between
 A more general purpose framework that protects an operating system kernel running within a virtual machine is explained in Chapter \ref{hyperforce}. This protection is achieved by enforcing the execution of secure code into the target machine. While maintaining target code and secure code isolated, our solution also provides a minimal overhead, due to the fact that secure code executes within the same system to be protected.
 
 
-Another environment that needs attention from the security research community, due to its prominent position in everyday computer usage is the web browser's and applications delivered on demand. We focus on these other environments in the second part of our work. 
+Another environment that needs attention from the security research community, due to its prominent position in everyday computer usage is the web browser and applications delivered on demand. We focus on these other environments in the second part of our work. 
 Although security of web browsers is a very active field of research, very little has been done to protect browsers with virtualisation in mind. 
 
 Therefore, we provide a security measure that improves web browser security and we explore the benefits of virtualisation technology in this area. A recent heap-based attack, by which attackers can allocate malicious objects to the heap of a web browser, by loading a specially forged web page that contains Javascript code, has drawn the attention of security researchers who operate in the field of browser security. We explain the details of a lightweight countermeasure against such attacks, known as \emph{heap-spraying}. We also argue in favour of the role that virtualisation technology can play within this environment and discuss a possible strategy for integrating such a countermeasure into web browsers and applications with a similar architecture, delivered on demand. Details are provided in Chapter \ref{bubble}.
